--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,10 @@
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" >
-    </ListView>
+        app:layout_constraintTop_toBottomOf="@+id/searchView"/>
 
     <Button
         android:id="@+id/button"
@@ -43,5 +41,16 @@
         android:layout_marginHorizontal="32dp"
         android:backgroundTint="@color/teal_700"
         android:text="@string/go_to_call_logs" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:layout_marginHorizontal="32dp"
+        android:backgroundTint="@color/teal_700"
+        android:text="@string/go_to_image_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
